--- a/PhoneBookDataEditor/AndroidManifest.xml
+++ b/PhoneBookDataEditor/AndroidManifest.xml
@@ -16,7 +16,8 @@
          <activity
             android:name="com.nnit.phonebook.dataeditor.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/NoTitle" >
+            android:theme="@style/NoTitle"
+            android:configChanges="orientation|keyboard" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,18 +25,21 @@
         </activity>
         <activity
             android:name="com.nnit.phonebook.dataeditor.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:configChanges="orientation|keyboard">
                 <action android:name="android.intent.action.MAIN" />
         </activity>
         <activity
-            android:name="com.nnit.phonebook.dataeditor.EditPhoneBookActivity" >
+            android:name="com.nnit.phonebook.dataeditor.EditPhoneBookActivity"
+            android:configChanges="orientation|keyboard" >
             <intent-filter>
                 <action android:name="com.nnit.phonebook.dataeditor.EditPhoneBookActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nnit.phonebook.dataeditor.NewPhoneBookActivity" >
+            android:name="com.nnit.phonebook.dataeditor.NewPhoneBookActivity"
+            android:configChanges="orientation|keyboard" >
             <intent-filter>
                 <action android:name="com.nnit.phonebook.dataeditor.NewPhoneBookActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -43,14 +47,16 @@
         </activity>
         <activity
             android:name="com.nnit.phonebook.dataeditor.NewMapActivity"
-            android:theme="@style/DarkTheme" >
+            android:theme="@style/DarkTheme"
+            android:configChanges="orientation|keyboard" >
             <intent-filter>
                 <action android:name="com.nnit.phonebook.dataeditor.NewMapActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nnit.phonebook.dataeditor.EditSeatPositionActivity" >
+            android:name="com.nnit.phonebook.dataeditor.EditSeatPositionActivity"
+            android:configChanges="orientation|keyboard" >
             <intent-filter>
                 <action android:name="com.nnit.phonebook.dataeditor.EditSeatPositionActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
